[tool.poetry]
name = "wkhtmltopdf-service"
version = "1.0.0"
description = "Yet another web app providing an interface to the awesome wkhtmltopdf."
authors = ["Tim McFadden <mtik00@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.2"
uvicorn = "^0.13.4"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
ipdb = "^0.13.7"
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
